# airc

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  README.md  REFCONTRACT.md  WINDOWS-PORT-STATUS.md  airc  airc.cmd  airc.ps1  airc.shim  bootstrap-airc.ps1  bootstrap-airc.sh  install.ps1  install.sh  probe-elevation.sh  relay  test-two-instance.sh  uninstall.sh
crates/airc-blobs/: Cargo.toml
crates/airc-blobs/src/: fs.rs  gc.rs  hash.rs  lib.rs
crates/airc-bus/: Cargo.toml
crates/airc-bus/src/: clock.rs  envelope.rs  ephemeral.rs  error.rs  filter.rs  lib.rs  ring.rs  router.rs  seq.rs  sink.rs
crates/airc-bus/tests/: crash_safe_seq.rs  durable_tail.rs  durable_tip.rs  ephemeral_off_sink.rs  forward_sink.rs  many_rooms.rs  no_gap_cursor.rs  publish_if_new.rs  slow_subscriber.rs
crates/airc-bus/tests/common/: mod.rs
crates/airc-cli/: Cargo.toml  build.rs
crates/airc-cli/src/: bearer_commands.rs  bearer_state.rs  build_info.rs  channel_gist_cli.rs  channel_gist_commands.rs  cli.rs  client_id.rs  codex_cli.rs  codex_commands.rs  codex_config.rs  codex_hooks_json.rs  codex_install.rs  codex_start.rs  collaboration_cli.rs  collaboration_commands.rs  collaboration_peers.rs  commands.rs  config_cli.rs  config_commands.rs  context_commands.rs  daemon_scope.rs  discovery.rs  doctor.rs  envelope_cli.rs  event_render.rs  events_cli.rs  events_commands.rs  gh_cli.rs  gh_client.rs  gh_commands.rs  gh_reqwest.rs  gh_state.rs  gist_cli.rs  gist_commands.rs  handshake_cli.rs  handshake_commands.rs  hygiene_cli.rs  hygiene_commands.rs  identity.rs  identity_cli.rs  (+56 more)
crates/airc-cli/src/bearer/: cli.rs  commands.rs  gh.rs  local_bus.rs  mod.rs  outcome.rs  recv.rs  rotate.rs
crates/airc-cli/src/daemon/: handlers.rs  mod.rs  server.rs  state.rs
crates/airc-cli/src/ipc/: mod.rs  (+4 more)
crates/airc-cli/tests/: codex_hook_commands.rs  config_commands.rs  daemon_lifecycle.rs  daemon_route_refresh.rs  daemon_scope_commands.rs  daemon_teardown.rs  e2e.rs  events_commands.rs  identity_commands.rs  inbox_json.rs  message_commands.rs  monitor_reconnect.rs  operational_dogfood.rs  owner_core_cli_dogfood.rs  peer_commands.rs  publish_command.rs  registry_hermetic.rs  route_commands.rs  transport_commands.rs  work_commands.rs  workspace_commands.rs  worktree_lane_commands.rs
crates/airc-daemon/: Cargo.toml
crates/airc-daemon/src/: auto_update.rs  handlers.rs  identity.rs  lib.rs  peers_store.rs  route_refresh.rs  server.rs  state.rs  trust_refresh.rs
crates/airc-daemon/tests/: attach_backlog_coalesce.rs  inbox_paging.rs  owner_core_proof.rs  room_tip_probe.rs  route_endpoints_probe.rs  work_churn_survival_proof.rs  work_event_propagation_proof.rs
crates/airc-diagnostics/: Cargo.toml
crates/airc-diagnostics/src/: lib.rs  probe.rs  timing.rs
crates/airc-identity/: Cargo.toml
crates/airc-identity/src/: lib.rs
crates/airc-ipc/: Cargo.toml
crates/airc-ipc/src/: client.rs  codec.rs  lib.rs  request.rs  response.rs  sdk_conversions.rs  transport.rs
crates/airc-lib/: Cargo.toml
crates/airc-lib/src/: account_registry.rs  adapter.rs  agent_heartbeat.rs  airc.rs  broadcast_deduper.rs  capability_registry.rs  command_bus.rs  coordinator.rs  coordinator_lock.rs  daemon.rs  delivery_ack.rs  diagnostic.rs  diagnostic_event_sink.rs  error.rs  external_identity.rs  fs_permissions.rs  gh_account_registry.rs  gh_client.rs  gh_governor.rs  grid_auth.rs  join_context.rs  lan.rs  lane_coordination.rs  lib.rs  lifecycle.rs  mesh_identity.rs  messaging.rs  peers.rs  publish.rs  registry.rs  registry_refresh.rs  relay.rs  room.rs  room_context.rs  route_execution.rs  route_forwarder.rs  route_health.rs  route_policy.rs  route_resolver.rs  router_bridge.rs  (+16 more)
crates/airc-lib/tests/: adapter_dispatch_wire.rs  agent_heartbeat_round_trip.rs  channel_purpose.rs  chat_throughput.rs  command_bus_round_trip.rs  consumer_throughput.rs  daemon_cursor_reads.rs  daemon_lan_visibility.rs  daemon_reconnect.rs  daemon_routed_forward.rs  default_room_durability.rs  default_room_read_only.rs  diagnostic_event_sink.rs  diagnostic_pipeline.rs  embedding_smoke.rs  external_identity_bridge.rs  fanout_bench.rs  identity_assertion.rs  lan_delivery_ack.rs  lan_latency_bench.rs  lane_coordination_round_trip.rs  lifecycle_events.rs  publish_to_room_does_not_mutate_default.rs  pull_requests_adapter.rs  relay_discovery.rs  room_context.rs  room_doctrine_lww.rs  room_roster.rs  sibling_scope_intra_machine_msg.rs  stored_endpoint_dial.rs  stream_session_over_lan.rs  structured_publish.rs  subscribe_live_edge.rs  udp_route.rs  webrtc_route.rs  work_api.rs  work_board_cache.rs  work_board_cache_perf.rs  work_subscription.rs
crates/airc-relay/: Cargo.toml
crates/airc-relay/src/: connection.rs  error.rs  lib.rs  main.rs  server.rs
crates/airc-relay/tests/: round_trip.rs
crates/airc-store/: Cargo.toml
crates/airc-store/src/: account_registry.rs  beacon.rs  bus_epoch_store.rs  bus_sink.rs  error.rs  lib.rs  local_identity.rs  memory.rs  mesh_identity.rs  peer_trust.rs  refresh_lock.rs  scoped_state.rs  sqlite.rs  store.rs  subscriptions.rs
crates/airc-store/tests/: bus_router_durable_tier.rs
crates/airc-transport/: Cargo.toml
crates/airc-transport/src/: error.rs  lib.rs  local_fs.rs  signed.rs  transport.rs
crates/airc-trust/: Cargo.toml
crates/airc-trust/src/: lib.rs
crates/airc-wire/: Cargo.toml
crates/airc-wire/src/: codec.rs  error.rs  lib.rs  wire_generated.rs
crates/airc-wire/tests/: codec.rs
crates/airc-work/: Cargo.toml
crates/airc-work-store/: Cargo.toml
crates/airc-work-store/src/: lib.rs  tests.rs
crates/airc-work/src/: drain_policy.rs  event.rs  goal.rs  goal_event.rs  ids.rs  lib.rs  local_git.rs  model.rs  projection.rs  pull_requests.rs  recipe.rs  replay.rs
crates/examples/consumer_shapes/: Cargo.toml
crates/examples/embedded_consumer_smoke/: Cargo.toml
crates/examples/persona_spawn_smoke/: Cargo.toml
integrations/acp/: Cargo.toml  README.md
integrations/acp/src/: main.rs
integrations/embedding-facility/bridge/: Cargo.toml
integrations/generate-facility/bridge/: Cargo.toml
(+377 files in other folders)
