[workspace]
members = [
    "crates/airc-core",
    "crates/airc-blobs",
    "crates/airc-protocol",
    "crates/airc-transport",
    "crates/airc-store",
    "crates/airc-work",
    "crates/airc-work-store",
    "crates/airc-relay",
    "crates/airc-daemon",
    "crates/airc-lib",
    "crates/airc-cli",
]
resolver = "2"

[workspace.lints.clippy]
undocumented_unsafe_blocks = "deny"
