[package]
name = "airc-blobs"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false
description = "Content-addressed blob storage for airc — large bodies live here, frames carry MediaRef pointers."

[dependencies]
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
thiserror = "1"

[dev-dependencies]
hex = "0.4"
serde_json = "1"
