[package]
name = "airc-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lints]
workspace = true

[[bin]]
name = "airc"
path = "src/main.rs"

[dependencies]
airc-core = { path = "../airc-core" }
airc-identity = { path = "../airc-identity" }
airc-ipc = { path = "../airc-ipc" }
airc-protocol = { path = "../airc-protocol" }
airc-transport = { path = "../airc-transport" }
airc-trust = { path = "../airc-trust" }
airc-daemon = { path = "../airc-daemon" }
airc-store = { path = "../airc-store" }
airc-lib = { path = "../airc-lib" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs", "signal", "net", "io-util", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml_edit = "0.22"
base64 = "0.22"
futures = "0.3"
uuid = { version = "1", features = ["v4", "v5"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
sha2 = "0.10"
sha1 = "0.10"
ed25519-dalek = { version = "2", features = ["pkcs8", "pem", "rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
rand_core = { version = "0.6", features = ["getrandom"] }
fs2 = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
temp-env = "0.3"
