[package]
name = "airc-diagnostics"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

# Typed operational diagnostics for AIRC substrate components.
# This crate is the boundary between protocol/runtime state and
# terminal logging. Libraries emit structured DiagnosticEvents; CLI or
# daemon hosts decide whether those become stderr JSONL, an ORM row, an
# AIRC event, or a test assertion.

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
