[package]
name = "airc-lib"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

# Consumer-facing AIRC API. Composes:
#   - airc-daemon::LocalIdentity (Ed25519 identity persisted at <home>)
#   - airc-store::SqliteEventStore (durable transcript backing)
#   - airc-transport (signed local-fs + LAN-TCP send/subscribe)
#   - airc-protocol (Frame ↔ TranscriptEvent boundary)
#
# Target use case (per operating doc gate 4 — Consumer Embedding):
# any consumer (Continuum, OpenClaw, Hermes, opencode, generic Rust
# app) can `use airc_lib::Airc;`, call `Airc::open(home).await`, and
# `airc.join(room).await`, `airc.say("hi").await`, `airc.page_recent(...)`
# without shelling out to the CLI or parsing prose.

[dependencies]
airc-core = { path = "../airc-core" }
airc-protocol = { path = "../airc-protocol" }
airc-store = { path = "../airc-store" }
airc-transport = { path = "../airc-transport" }
airc-daemon = { path = "../airc-daemon" }
airc-work = { path = "../airc-work" }
airc-work-store = { path = "../airc-work-store" }

async-trait = "0.1"
base64 = "0.22"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
uuid = { version = "1", features = ["v4", "v5"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }
