[package]
name = "airc-relay"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lints]
workspace = true

[[bin]]
name = "airc-relay"
path = "src/main.rs"

[dependencies]
airc-core = { path = "../airc-core" }
airc-protocol = { path = "../airc-protocol" }
airc-transport = { path = "../airc-transport" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "net", "rt", "rt-multi-thread", "sync", "time", "macros", "signal"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["tls12", "ring"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros", "rt-multi-thread"] }
futures = "0.3"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
serde_json = "1"
