[package]
name = "airc-store"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

# SeaORM-backed event store: append, page, resume-from-cursor APIs
# over the canonical `TranscriptEvent` from `airc-core`. SQLite is
# the first backing; the trait surface is generic enough that
# Postgres / MySQL drop in via sea-orm's DatabaseBackend.

[lints]
workspace = true

[dependencies]
airc-core = { path = "../airc-core" }
# Lower-level generic owner-core. The durable tier (this crate) implements
# `airc_bus::DurableSink`, so `airc-store -> airc-bus` is the correct
# dependency direction; airc-bus must NOT depend on airc-store.
airc-bus = { path = "../airc-bus" }
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"

sea-orm = { version = "1", default-features = false, features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "with-json",
] }
sea-orm-migration = { version = "1", default-features = false, features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }
tokio = { version = "1", features = ["rt", "macros"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "sync"] }
tempfile = "3"
# The owner-core router, exercised against the real SQLite durable tier in
# the integration proof (deep-replay from disk).
futures = "0.3"
