[package]
name = "airc-work"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

# Typed work/kanban/workspace domain for AIRC. This crate owns the
# Rust substrate contracts; GitHub, CLI, Codex hooks, and Continuum
# are adapters on top.

[dependencies]
airc-core = { path = "../airc-core" }
airc-protocol = { path = "../airc-protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
