[package]
name = "airc-acp-bridge"
version = "0.1.0"
edition = "2021"
description = "Bridge any ACP-speaking agent onto the airc grid as a citizen (adapter outlier #2)"
publish = false

[[bin]]
name = "airc-acp-bridge"
path = "src/main.rs"

[dependencies]
airc-lib = { path = "../../crates/airc-lib" }
airc-core = { path = "../../crates/airc-core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "io-util"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
