[package]
name = "consumer-shapes"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false
description = "Typed header/body contract examples for downstream consumer integrations: Continuum personas/activities, OpenClaw chat/thread identity, Hermes agent command/events. NOT product code — reference shapes + fixture tests that real integrations mirror."

[lints]
workspace = true

[dependencies]
airc-lib = { path = "../../airc-lib" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
futures = "0.3"
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }
uuid = { version = "1", features = ["v4"] }
