[package]
name = "embedded-consumer-smoke"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false
description = "Consumer-embedding proof: a downstream crate that links airc-lib and exercises the embedding pattern end-to-end. NOT product code; integration test only."

[lints]
workspace = true

[dependencies]
# This crate consumes airc-lib like any external embedder would. Its
# only AIRC dependency is airc-lib, not the lower-level airc-core /
# airc-protocol / airc-store / etc. That constraint is what proves
# the API is genuinely consumable without reaching into substrate
# internals.
airc-lib = { path = "../../airc-lib" }
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["test-util", "macros", "rt-multi-thread", "time"] }
