[package]
name = "airc-generate-bridge"
version = "0.1.0"
edition = "2021"
description = "Advertise a local llama.cpp generation server as the ai/generate capability on the airc grid (5090 compute-lease facility)"
publish = false

[[bin]]
name = "airc-generate-bridge"
path = "src/main.rs"

[dependencies]
airc-lib = { path = "../../../crates/airc-lib" }
airc-core = { path = "../../../crates/airc-core" }
consumer-shapes = { path = "../../../crates/examples/consumer_shapes" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "json"] }
